# LocalOrpheusTTS

./: .env  .gitignore  .gitmodules  README.md  pyproject.toml  setup.sh  start.sh
patches/: tts_inference.patch
