[project]
name = "local-tts"
version = "0.1.0"
description = "Local TTS"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "fastapi==0.103.1",
    "jinja2==3.1.2",
    "numpy==1.24.0",
    "psutil==5.9.0",
    "pydantic==2.3.0",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "requests==2.31.0",
    "snac==1.2.1",
    "sounddevice==0.4.6",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "uvicorn==0.23.2",
    "watchfiles==1.0.4",
]
